[UI] use 'Style Queries' technic to get non-numerical properties responsive, thereby fix the bug on small screen.

--- a/src/styles/themes/_defaults.css
+++ b/src/styles/themes/_defaults.css
@@ -56,11 +56,11 @@
         45px 45px 80px rgba(0, 0, 0, 0.07); /*generated by https://shadows.brumm.af */
 }
 
-@property --OUTLINE_SWITCH {
-    syntax: "<number>";
-    inherits:  true;
-    initial-value: 1;
-}
+@property --OUTLINE_SWITCH  {syntax:"<number>"; inherits:true;  initial-value:1;    }
+@property --SW__SCREEN_L    {syntax:"<length>"; inherits:true;  initial-value:0px;  } /*large-size screen breakpoint switcher, default: <turn-off> */
+@property --SW__SCREEN_M    {syntax:"<length>"; inherits:true;  initial-value:0px;  } /*medium-size screen breakpoint switcher, default: <turn-off> */
+@property --SW__SCREEN_S    {syntax:"<length>"; inherits:true;  initial-value:0px;  } /*small-size screen breakpoint switcher, default: <turn-off> */
+@property --SW__SCREEN_XS   {syntax:"<length>"; inherits:true;  initial-value:0px;  } /*tiny screen breakpoint switcher, default: <turn-off> */
 
 * { outline-offset: calc(var(--outline_thickness) * -1); }
 
